--- a/dejae/src/partie2.htm
+++ b/dejae/src/partie2.htm
@@ -1,108 +1,68 @@
 <html>
-<head>
-<title>Partie 2 : le d&eacute;veloppement en Java</title>
-<meta http-equiv="Content-type" content="text/html; charset=ISO-8859-1">
-<meta name="description" content="">
-<meta name="keywords" content="java tutorial cours dejae eclipse">
-<meta name="robots" content="all">
-<meta name="revisit-after" content="2 months">
-<meta http-equiv="Content-Language" content="fr-FX">
-<meta name="author" content="Jean Michel DOUDOUX">
-<meta http-equiv="Reply-to" content="jean-michel.doudoux@wanadoo.fr">
-<link rev=made href="mailto:jean-michel.doudoux@wanadoo.fr">
-<link href="dej_style.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-<!--ENTETE-->
-<table border="0" cellpadding="2" cellspacing="0" width="100%" bgcolor="#7B7BC2">
-<TBODY>
-<tr>
-<td rowspan="2" align="center" width="50">&nbsp;</td><td rowspan="2" align="center" width="50">
-<A HREF="chap006.htm" ALT="6.  L'aide dans Eclipse">
-<img src="FlecheG.gif" alt="6.  L'aide dans Eclipse" align="left" border="0" hspace="0" width="31" height="31">
-</a>
-</td>
-<td rowspan="2" align="center" width="50">
-<A HREF="chap007.htm" ALT="7.   Le Java Development Tooling (JDT)">
-<img src="FlecheD.gif" alt="7.   Le Java Development Tooling (JDT)" align="left" border="0" hspace="0" width="31" height="31">
-</a>
-</td>
-<td rowspan="2" align="center" >
-<a href="javascript:window.print()">
-<img src="imprimer.gif" width="46" height="40" align="middle" alt="Imprimer" border="0">
-</a>
-</td>
-<td rowspan="2" align="center" >
-<a href="index.htm">
-<img src="index.gif" alt="Sommaire" align="middle" border="0" hspace="0" width="34" height="31">
-</a>
-</td>
-<td rowspan="2" align="center" >
-<a href="indexavecframes.htm"  target="_top">
-<img src="frame.png" alt="Consulter avec table des matières" align="middle" border="0" hspace="0" width="46" height="40">
-</a>
-</td>
-<td align="right">
-<font color="#FFFFFF" size="5"><b><i>Développons en Java avec Eclipse&nbsp;&nbsp;</i></b></font><font color="#FFFFFF" size="-2"> v 0.80&nbsp;&nbsp;</font></td>
-</tr>
-<tr>
-<td align="right"><font color="#FFFFFF" size="-2">Copyright (C) 2003-2007 Jean-Michel DOUDOUX &nbsp;&nbsp;</font></td>
-</tr>
-</TBODY>
-</table>
-<HR>
-
-<p>&nbsp;</p>
-<h1><!--resumetitre value="" -->Partie 2 : le d&eacute;veloppement en Java</h1>
-<p>&nbsp;</p>
-<p align="center"><img src="images/partie2.gif" width="621" height="498"></p>
-<p>&nbsp;</p>
-<p>Cette seconde partie est charg&eacute;e de pr&eacute;senter les bases de l'utilisation d'Eclipse pour le d&eacute;veloppement avec Java.</p>
-<p>Elle comporte les chapitres suivants : </p>
-<!--listechapitredeb-->
-  <ul>
-    <li type="square">Le Java Development Tooling (JDT)</a> : D&eacute;taille le JDT qui fournit des outils pour permettre le d&eacute;veloppement avec Java</li>
-    <li type="square">D&eacute;boguer du code Java</a> : d&eacute;taille la perspective D&eacute;bogage d&eacute;di&eacute;e &agrave; la recherche et &agrave; la correction des bugs.</li>
-    <li type="square">Le refactoring</a> : d&eacute;taille les puissantes fonctionnalit&eacute;s de refactoring propos&eacute;es par Eclipse</li>
-    <li type="square">Ant et Eclipse</a> : pr&eacute;sente l'utilisation de l'outil Ant avec Eclipse</li>
-    <li type="square">JUnit et Eclipse</a> : pr&eacute;sente l'utilisation de JUnit avec Eclipse pour r&eacute;aliser l'automatisation des tests unitaires.</li>
-  </ul>
-<!--listechapitrefin-->
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<!--PIED--><HR>
-<table border="0" cellpadding="2" cellspacing="0" width="100%" bgcolor="#7B7BC2">
-<TBODY>
-<tr>
-<td rowspan="2" align="center" width="50">&nbsp;</td><td rowspan="2" align="center" width="50">
-<A HREF="chap006.htm" ALT="6.  L'aide dans Eclipse">
-<img src="FlecheG.gif" alt="6.  L'aide dans Eclipse" align="left" border="0" hspace="0" width="31" height="31">
-</a>
-</td>
-<td rowspan="2" align="center" width="50">
-<A HREF="chap007.htm" ALT="7.   Le Java Development Tooling (JDT)">
-<img src="FlecheD.gif" alt="7.   Le Java Development Tooling (JDT)" align="left" border="0" hspace="0" width="31" height="31">
-</a>
-</td>
-<td rowspan="2" align="center" >
-<a href="javascript:window.print()">
-<img src="imprimer.gif" width="46" height="40" align="middle" alt="Imprimer" border="0">
-</a>
-</td>
-<td rowspan="2" align="center" >
-<a href="index.htm">
-<img src="index.gif" alt="Sommaire" align="middle" border="0" hspace="0" width="34" height="31">
-</a>
-</td>
-<td rowspan="2" align="center" >
-<a href="indexavecframes.htm"  target="_top">
-<img src="frame.png" alt="Consulter avec table des matières" align="middle" border="0" hspace="0" width="46" height="40">
-</a>
-</td>
-<td align="right">
-<font color="#FFFFFF" size="5"><b><i>Développons en Java avec Eclipse&nbsp;&nbsp;</i></b></font><font color="#FFFFFF" size="-2"> v 0.80&nbsp;&nbsp;</font></td>
-<td  rowspan="2" align="center" valign="middle">
-        <script language="JavaScript1.1">
+ <head> 
+  <title>Partie 2 : le d&eacute;veloppement en Java</title> 
+  <meta http-equiv="Content-type" content="text/html; charset=ISO-8859-1"> 
+  <meta name="description" content=""> 
+  <meta name="keywords" content="java tutorial cours dejae eclipse"> 
+  <meta name="robots" content="all"> 
+  <meta name="revisit-after" content="2 months"> 
+  <meta http-equiv="Content-Language" content="fr-FX"> 
+  <meta name="author" content="Jean Michel DOUDOUX"> 
+  <meta http-equiv="Reply-to" content="jean-michel.doudoux@wanadoo.fr"> 
+  <link rev="made" href="mailto:jean-michel.doudoux@wanadoo.fr"> 
+  <link href="dej_style.css" rel="stylesheet" type="text/css"> 
+ </head> 
+ <body> 
+  <!--ENTETE--> 
+  <table border="0" cellpadding="2" cellspacing="0" width="100%" bgcolor="#7B7BC2"> 
+   <tbody> 
+    <tr> 
+     <td rowspan="2" align="center" width="50">&nbsp;</td>
+     <td rowspan="2" align="center" width="50"> <a href="chap006.htm" alt="6.  L'aide dans Eclipse"> <img src="FlecheG.gif" alt="6.  L'aide dans Eclipse" align="left" border="0" hspace="0" width="31" height="31"> </a> </td> 
+     <td rowspan="2" align="center" width="50"> <a href="chap007.htm" alt="7.   Le Java Development Tooling (JDT)"> <img src="FlecheD.gif" alt="7.   Le Java Development Tooling (JDT)" align="left" border="0" hspace="0" width="31" height="31"> </a> </td> 
+     <td rowspan="2" align="center"> <a href="javascript:window.print()"> <img src="imprimer.gif" width="46" height="40" align="middle" alt="Imprimer" border="0"> </a> </td> 
+     <td rowspan="2" align="center"> <a href="index.htm"> <img src="index.gif" alt="Sommaire" align="middle" border="0" hspace="0" width="34" height="31"> </a> </td> 
+     <td rowspan="2" align="center"> <a href="indexavecframes.htm" target="_top"> <img src="frame.png" alt="Consulter avec table des mati&egrave;res" align="middle" border="0" hspace="0" width="46" height="40"> </a> </td> 
+     <td align="right"> <font color="#FFFFFF" size="5"><b><i>D&eacute;veloppons en Java avec Eclipse&nbsp;&nbsp;</i></b></font><font color="#FFFFFF" size="-2"> v 0.80&nbsp;&nbsp;</font></td> 
+    </tr> 
+    <tr> 
+     <td align="right"><font color="#FFFFFF" size="-2">Copyright (C) 2003-2007 Jean-Michel DOUDOUX &nbsp;&nbsp;</font></td> 
+    </tr> 
+   </tbody> 
+  </table> 
+  <hr> 
+  <p>&nbsp;</p> 
+  <h1>
+   <!--resumetitre value="" -->Partie 2 : le d&eacute;veloppement en Java</h1> 
+  <p>&nbsp;</p> 
+  <p align="center"><img src="images/partie2.gif" width="621" height="498"></p> 
+  <p>&nbsp;</p> 
+  <p>Cette seconde partie est charg&eacute;e de pr&eacute;senter les bases de l'utilisation d'Eclipse pour le d&eacute;veloppement avec Java.</p> 
+  <p>Elle comporte les chapitres suivants : </p> 
+  <!--listechapitredeb--> 
+  <ul> 
+   <li type="square">Le Java Development Tooling (JDT) : D&eacute;taille le JDT qui fournit des outils pour permettre le d&eacute;veloppement avec Java</li> 
+   <li type="square">D&eacute;boguer du code Java : d&eacute;taille la perspective D&eacute;bogage d&eacute;di&eacute;e &agrave; la recherche et &agrave; la correction des bugs.</li> 
+   <li type="square">Le refactoring : d&eacute;taille les puissantes fonctionnalit&eacute;s de refactoring propos&eacute;es par Eclipse</li> 
+   <li type="square">Ant et Eclipse : pr&eacute;sente l'utilisation de l'outil Ant avec Eclipse</li> 
+   <li type="square">JUnit et Eclipse : pr&eacute;sente l'utilisation de JUnit avec Eclipse pour r&eacute;aliser l'automatisation des tests unitaires.</li> 
+  </ul> 
+  <!--listechapitrefin--> 
+  <p>&nbsp;</p> 
+  <p>&nbsp;</p> 
+  <!--PIED-->
+  <hr> 
+  <table border="0" cellpadding="2" cellspacing="0" width="100%" bgcolor="#7B7BC2"> 
+   <tbody> 
+    <tr> 
+     <td rowspan="2" align="center" width="50">&nbsp;</td>
+     <td rowspan="2" align="center" width="50"> <a href="chap006.htm" alt="6.  L'aide dans Eclipse"> <img src="FlecheG.gif" alt="6.  L'aide dans Eclipse" align="left" border="0" hspace="0" width="31" height="31"> </a> </td> 
+     <td rowspan="2" align="center" width="50"> <a href="chap007.htm" alt="7.   Le Java Development Tooling (JDT)"> <img src="FlecheD.gif" alt="7.   Le Java Development Tooling (JDT)" align="left" border="0" hspace="0" width="31" height="31"> </a> </td> 
+     <td rowspan="2" align="center"> <a href="javascript:window.print()"> <img src="imprimer.gif" width="46" height="40" align="middle" alt="Imprimer" border="0"> </a> </td> 
+     <td rowspan="2" align="center"> <a href="index.htm"> <img src="index.gif" alt="Sommaire" align="middle" border="0" hspace="0" width="34" height="31"> </a> </td> 
+     <td rowspan="2" align="center"> <a href="indexavecframes.htm" target="_top"> <img src="frame.png" alt="Consulter avec table des mati&egrave;res" align="middle" border="0" hspace="0" width="46" height="40"> </a> </td> 
+     <td align="right"> <font color="#FFFFFF" size="5"><b><i>D&eacute;veloppons en Java avec Eclipse&nbsp;&nbsp;</i></b></font><font color="#FFFFFF" size="-2"> v 0.80&nbsp;&nbsp;</font></td> 
+     <td rowspan="2" align="center" valign="middle"> <script language="JavaScript1.1">
 <!--
 hsh = new Date();
 hsd = document;
@@ -117,22 +77,16 @@ if(parseFloat(navigator.appVersion)>=4)
 {Xiti_s=screen;hsi += '&r=' + Xiti_s.width + 'x' + Xiti_s.height + 'x' + Xiti_s.pixelDepth + 'x' + Xiti_s.colorDepth;}
 hsd.writeln(hsi + '&ref=' + hsr.replace(/&/g, '$') + '" title="Mesurez votre audience"></a><\!--');
 //-->
-</script>
-        <noscript>
-        <a href="http://www.xiti.com/xiti.asp?s=128624" target="_top"><img width="39" height="25" border=0 src="http://logv23.xiti.com/hit.xiti?s=128624&p=&" title="Mesurez votre audience"></a>
-        </noscript>
-        <!--//-->
-      </td>
-</tr>
-<tr>
-<td align="right"><font color="#FFFFFF" size="-2">Copyright (C) 2003-2007 Jean-Michel DOUDOUX &nbsp;&nbsp;</font></td>
-</tr>
-</TBODY>
-</table>
-
-</body>
+</script> 
+      <noscript> 
+       <a href="http://www.xiti.com/xiti.asp?s=128624" target="_top"><img width="39" height="25" border="0" src="http://logv23.xiti.com/hit.xiti?s=128624&amp;p=&amp;" title="Mesurez votre audience"></a> 
+      </noscript> 
+      <!--//--> </td> 
+    </tr> 
+    <tr> 
+     <td align="right"><font color="#FFFFFF" size="-2">Copyright (C) 2003-2007 Jean-Michel DOUDOUX &nbsp;&nbsp;</font></td> 
+    </tr> 
+   </tbody> 
+  </table>   
+ </body>
 </html>
-
-
-
-
