--- a/dejae/src/partie5.htm
+++ b/dejae/src/partie5.htm
@@ -1,111 +1,71 @@
 <html>
-<head>
-<title>Partie 5 : le d&eacute;veloppement d'applications d'entreprise</title>
-<meta http-equiv="Content-type" content="text/html; charset=ISO-8859-1">
-<meta name="description" content="">
-<meta name="keywords" content="java tutorial cours dejae eclipse">
-<meta name="robots" content="all">
-<meta name="revisit-after" content="2 months">
-<meta http-equiv="Content-Language" content="fr-FX">
-<meta name="author" content="Jean Michel DOUDOUX">
-<meta http-equiv="Reply-to" content="jean-michel.doudoux@wanadoo.fr">
-<link rev=made href="mailto:jean-michel.doudoux@wanadoo.fr">
-<link href="dej_style.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-<!--ENTETE-->
-<table border="0" cellpadding="2" cellspacing="0" width="100%" bgcolor="#7B7BC2">
-<TBODY>
-<tr>
-<td rowspan="2" align="center" width="50">&nbsp;</td><td rowspan="2" align="center" width="50">
-<A HREF="chap019.htm" ALT="19. Hibernate et Eclipse">
-<img src="FlecheG.gif" alt="19. Hibernate et Eclipse" align="left" border="0" hspace="0" width="31" height="31">
-</a>
-</td>
-<td rowspan="2" align="center" width="50">
-<A HREF="chap020.htm" ALT="20.    Le d&eacute;veloppement avec J2EE">
-<img src="FlecheD.gif" alt="20.    Le d&eacute;veloppement avec J2EE" align="left" border="0" hspace="0" width="31" height="31">
-</a>
-</td>
-<td rowspan="2" align="center" >
-<a href="javascript:window.print()">
-<img src="imprimer.gif" width="46" height="40" align="middle" alt="Imprimer" border="0">
-</a>
-</td>
-<td rowspan="2" align="center" >
-<a href="index.htm">
-<img src="index.gif" alt="Sommaire" align="middle" border="0" hspace="0" width="34" height="31">
-</a>
-</td>
-<td rowspan="2" align="center" >
-<a href="indexavecframes.htm"  target="_top">
-<img src="frame.png" alt="Consulter avec table des matières" align="middle" border="0" hspace="0" width="46" height="40">
-</a>
-</td>
-<td align="right">
-<font color="#FFFFFF" size="5"><b><i>Développons en Java avec Eclipse&nbsp;&nbsp;</i></b></font><font color="#FFFFFF" size="-2"> v 0.80&nbsp;&nbsp;</font></td>
-</tr>
-<tr>
-<td align="right"><font color="#FFFFFF" size="-2">Copyright (C) 2003-2007 Jean-Michel DOUDOUX &nbsp;&nbsp;</font></td>
-</tr>
-</TBODY>
-</table>
-<HR>
-
-<p>&nbsp;</p>
-<h1><!--resumetitre value="" -->Partie 5 : le d&eacute;veloppement d'applications d'entreprise</h1>
-<p>&nbsp;</p>
-<p align="center"><img src="images/partie5.png" width="600" height="438"></p>
-<p>&nbsp;</p>
-<p>Cette partie concerne l'utilisation d'Eclipse pour d&eacute;velopper des applications pour entreprise avec la version Enterprise Edition de Java.</p>
-<p>Elle comporte les chapitres suivants : </p>
-<!--listechapitredeb-->
-  <ul>
-    <li type="square">Le d&eacute;veloppement avec J2EE</a> : Pr&eacute;sente des plug-ins pour faciliter le d&eacute;veloppement avec J2EE.</li>
-    <li type="square">XML et Eclipse</a> : d&eacute;taille l'utilisation de plug-ins facilitant la mise en oeuvre de XML avec Eclipse.</li>
-    <li type="square">Le d&eacute;veloppement d'applications web</a> : Propose de mettre en oeuvre le d&eacute;veloppement d'applications web gr&agrave;ce &agrave; des plug-ins d'Eclipse.</li>
-    <li type="square">Struts et Eclipse</a> : d&eacute;taille au travers d'un exemple l'utilisation du plug-in Esay Struts pour d&eacute;veloppement des applications web utilisant Struts.</li>
-    <li type="square">Java Server Faces et Eclipse</a> : d&eacute;taille au travers d'un exemple l'utilisation d'Eclipse pour d&eacute;velopper une application web utilisant JSF.</li>
-    <li type="square">EJB et Eclipse</a> : Propose de d&eacute;velopper des EJB en utilisant des plug-ins d'Eclipse.</li>
-    <li type="square">Les services web et Eclipse</a> : Propose d'utiliser Eclipse pour d&eacute;velopper des services web manuellement ou avec le plug-in WTP.</li>
-    <li type="square">JPA et Eclipse</a> : Propose de mettre en oeuvre le plug-in Dali pour faciliter la mise en oeuvre de l'API Java Persistence API.</li>
-  </ul>
-<!--listechapitrefin-->
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<!--PIED--><HR>
-<table border="0" cellpadding="2" cellspacing="0" width="100%" bgcolor="#7B7BC2">
-<TBODY>
-<tr>
-<td rowspan="2" align="center" width="50">&nbsp;</td><td rowspan="2" align="center" width="50">
-<A HREF="chap019.htm" ALT="19. Hibernate et Eclipse">
-<img src="FlecheG.gif" alt="19. Hibernate et Eclipse" align="left" border="0" hspace="0" width="31" height="31">
-</a>
-</td>
-<td rowspan="2" align="center" width="50">
-<A HREF="chap020.htm" ALT="20.    Le d&eacute;veloppement avec J2EE">
-<img src="FlecheD.gif" alt="20.    Le d&eacute;veloppement avec J2EE" align="left" border="0" hspace="0" width="31" height="31">
-</a>
-</td>
-<td rowspan="2" align="center" >
-<a href="javascript:window.print()">
-<img src="imprimer.gif" width="46" height="40" align="middle" alt="Imprimer" border="0">
-</a>
-</td>
-<td rowspan="2" align="center" >
-<a href="index.htm">
-<img src="index.gif" alt="Sommaire" align="middle" border="0" hspace="0" width="34" height="31">
-</a>
-</td>
-<td rowspan="2" align="center" >
-<a href="indexavecframes.htm"  target="_top">
-<img src="frame.png" alt="Consulter avec table des matières" align="middle" border="0" hspace="0" width="46" height="40">
-</a>
-</td>
-<td align="right">
-<font color="#FFFFFF" size="5"><b><i>Développons en Java avec Eclipse&nbsp;&nbsp;</i></b></font><font color="#FFFFFF" size="-2"> v 0.80&nbsp;&nbsp;</font></td>
-<td  rowspan="2" align="center" valign="middle">
-        <script language="JavaScript1.1">
+ <head> 
+  <title>Partie 5 : le d&eacute;veloppement d'applications d'entreprise</title> 
+  <meta http-equiv="Content-type" content="text/html; charset=ISO-8859-1"> 
+  <meta name="description" content=""> 
+  <meta name="keywords" content="java tutorial cours dejae eclipse"> 
+  <meta name="robots" content="all"> 
+  <meta name="revisit-after" content="2 months"> 
+  <meta http-equiv="Content-Language" content="fr-FX"> 
+  <meta name="author" content="Jean Michel DOUDOUX"> 
+  <meta http-equiv="Reply-to" content="jean-michel.doudoux@wanadoo.fr"> 
+  <link rev="made" href="mailto:jean-michel.doudoux@wanadoo.fr"> 
+  <link href="dej_style.css" rel="stylesheet" type="text/css"> 
+ </head> 
+ <body> 
+  <!--ENTETE--> 
+  <table border="0" cellpadding="2" cellspacing="0" width="100%" bgcolor="#7B7BC2"> 
+   <tbody> 
+    <tr> 
+     <td rowspan="2" align="center" width="50">&nbsp;</td>
+     <td rowspan="2" align="center" width="50"> <a href="chap019.htm" alt="19. Hibernate et Eclipse"> <img src="FlecheG.gif" alt="19. Hibernate et Eclipse" align="left" border="0" hspace="0" width="31" height="31"> </a> </td> 
+     <td rowspan="2" align="center" width="50"> <a href="chap020.htm" alt="20.    Le d&eacute;veloppement avec J2EE"> <img src="FlecheD.gif" alt="20.    Le d&eacute;veloppement avec J2EE" align="left" border="0" hspace="0" width="31" height="31"> </a> </td> 
+     <td rowspan="2" align="center"> <a href="javascript:window.print()"> <img src="imprimer.gif" width="46" height="40" align="middle" alt="Imprimer" border="0"> </a> </td> 
+     <td rowspan="2" align="center"> <a href="index.htm"> <img src="index.gif" alt="Sommaire" align="middle" border="0" hspace="0" width="34" height="31"> </a> </td> 
+     <td rowspan="2" align="center"> <a href="indexavecframes.htm" target="_top"> <img src="frame.png" alt="Consulter avec table des mati&egrave;res" align="middle" border="0" hspace="0" width="46" height="40"> </a> </td> 
+     <td align="right"> <font color="#FFFFFF" size="5"><b><i>D&eacute;veloppons en Java avec Eclipse&nbsp;&nbsp;</i></b></font><font color="#FFFFFF" size="-2"> v 0.80&nbsp;&nbsp;</font></td> 
+    </tr> 
+    <tr> 
+     <td align="right"><font color="#FFFFFF" size="-2">Copyright (C) 2003-2007 Jean-Michel DOUDOUX &nbsp;&nbsp;</font></td> 
+    </tr> 
+   </tbody> 
+  </table> 
+  <hr> 
+  <p>&nbsp;</p> 
+  <h1>
+   <!--resumetitre value="" -->Partie 5 : le d&eacute;veloppement d'applications d'entreprise</h1> 
+  <p>&nbsp;</p> 
+  <p align="center"><img src="images/partie5.png" width="600" height="438"></p> 
+  <p>&nbsp;</p> 
+  <p>Cette partie concerne l'utilisation d'Eclipse pour d&eacute;velopper des applications pour entreprise avec la version Enterprise Edition de Java.</p> 
+  <p>Elle comporte les chapitres suivants : </p> 
+  <!--listechapitredeb--> 
+  <ul> 
+   <li type="square">Le d&eacute;veloppement avec J2EE : Pr&eacute;sente des plug-ins pour faciliter le d&eacute;veloppement avec J2EE.</li> 
+   <li type="square">XML et Eclipse : d&eacute;taille l'utilisation de plug-ins facilitant la mise en oeuvre de XML avec Eclipse.</li> 
+   <li type="square">Le d&eacute;veloppement d'applications web : Propose de mettre en oeuvre le d&eacute;veloppement d'applications web gr&agrave;ce &agrave; des plug-ins d'Eclipse.</li> 
+   <li type="square">Struts et Eclipse : d&eacute;taille au travers d'un exemple l'utilisation du plug-in Esay Struts pour d&eacute;veloppement des applications web utilisant Struts.</li> 
+   <li type="square">Java Server Faces et Eclipse : d&eacute;taille au travers d'un exemple l'utilisation d'Eclipse pour d&eacute;velopper une application web utilisant JSF.</li> 
+   <li type="square">EJB et Eclipse : Propose de d&eacute;velopper des EJB en utilisant des plug-ins d'Eclipse.</li> 
+   <li type="square">Les services web et Eclipse : Propose d'utiliser Eclipse pour d&eacute;velopper des services web manuellement ou avec le plug-in WTP.</li> 
+   <li type="square">JPA et Eclipse : Propose de mettre en oeuvre le plug-in Dali pour faciliter la mise en oeuvre de l'API Java Persistence API.</li> 
+  </ul> 
+  <!--listechapitrefin--> 
+  <p>&nbsp;</p> 
+  <p>&nbsp;</p> 
+  <!--PIED-->
+  <hr> 
+  <table border="0" cellpadding="2" cellspacing="0" width="100%" bgcolor="#7B7BC2"> 
+   <tbody> 
+    <tr> 
+     <td rowspan="2" align="center" width="50">&nbsp;</td>
+     <td rowspan="2" align="center" width="50"> <a href="chap019.htm" alt="19. Hibernate et Eclipse"> <img src="FlecheG.gif" alt="19. Hibernate et Eclipse" align="left" border="0" hspace="0" width="31" height="31"> </a> </td> 
+     <td rowspan="2" align="center" width="50"> <a href="chap020.htm" alt="20.    Le d&eacute;veloppement avec J2EE"> <img src="FlecheD.gif" alt="20.    Le d&eacute;veloppement avec J2EE" align="left" border="0" hspace="0" width="31" height="31"> </a> </td> 
+     <td rowspan="2" align="center"> <a href="javascript:window.print()"> <img src="imprimer.gif" width="46" height="40" align="middle" alt="Imprimer" border="0"> </a> </td> 
+     <td rowspan="2" align="center"> <a href="index.htm"> <img src="index.gif" alt="Sommaire" align="middle" border="0" hspace="0" width="34" height="31"> </a> </td> 
+     <td rowspan="2" align="center"> <a href="indexavecframes.htm" target="_top"> <img src="frame.png" alt="Consulter avec table des mati&egrave;res" align="middle" border="0" hspace="0" width="46" height="40"> </a> </td> 
+     <td align="right"> <font color="#FFFFFF" size="5"><b><i>D&eacute;veloppons en Java avec Eclipse&nbsp;&nbsp;</i></b></font><font color="#FFFFFF" size="-2"> v 0.80&nbsp;&nbsp;</font></td> 
+     <td rowspan="2" align="center" valign="middle"> <script language="JavaScript1.1">
 <!--
 hsh = new Date();
 hsd = document;
@@ -120,22 +80,16 @@ if(parseFloat(navigator.appVersion)>=4)
 {Xiti_s=screen;hsi += '&r=' + Xiti_s.width + 'x' + Xiti_s.height + 'x' + Xiti_s.pixelDepth + 'x' + Xiti_s.colorDepth;}
 hsd.writeln(hsi + '&ref=' + hsr.replace(/&/g, '$') + '" title="Mesurez votre audience"></a><\!--');
 //-->
-</script>
-        <noscript>
-        <a href="http://www.xiti.com/xiti.asp?s=128624" target="_top"><img width="39" height="25" border=0 src="http://logv23.xiti.com/hit.xiti?s=128624&p=&" title="Mesurez votre audience"></a>
-        </noscript>
-        <!--//-->
-      </td>
-</tr>
-<tr>
-<td align="right"><font color="#FFFFFF" size="-2">Copyright (C) 2003-2007 Jean-Michel DOUDOUX &nbsp;&nbsp;</font></td>
-</tr>
-</TBODY>
-</table>
-
-</body>
+</script> 
+      <noscript> 
+       <a href="http://www.xiti.com/xiti.asp?s=128624" target="_top"><img width="39" height="25" border="0" src="http://logv23.xiti.com/hit.xiti?s=128624&amp;p=&amp;" title="Mesurez votre audience"></a> 
+      </noscript> 
+      <!--//--> </td> 
+    </tr> 
+    <tr> 
+     <td align="right"><font color="#FFFFFF" size="-2">Copyright (C) 2003-2007 Jean-Michel DOUDOUX &nbsp;&nbsp;</font></td> 
+    </tr> 
+   </tbody> 
+  </table>   
+ </body>
 </html>
-
-
-
-
