--- a/dejae/src/partie7.htm
+++ b/dejae/src/partie7.htm
@@ -1,28 +1,28 @@
 <html>
  <head> 
   <title>Partie 7 : d'autres plug-ins</title> 
-  <meta http-equiv="Content-type" content="text/html; charset=ISO-8859-1"> 
-  <meta name="description" content=""> 
-  <meta name="keywords" content="java tutorial cours dejae eclipse"> 
-  <meta name="robots" content="all"> 
-  <meta name="revisit-after" content="2 months"> 
-  <meta http-equiv="Content-Language" content="fr-FX"> 
-  <meta name="author" content="Jean Michel DOUDOUX"> 
-  <meta http-equiv="Reply-to" content="jean-michel.doudoux@wanadoo.fr"> 
-  <link rev="made" href="mailto:jean-michel.doudoux@wanadoo.fr"> 
-  <link href="dej_style.css" rel="stylesheet" type="text/css"> 
+  <meta http-equiv="Content-type" content="text/html; charset=ISO-8859-1" /> 
+  <meta name="description" content="" /> 
+  <meta name="keywords" content="java tutorial cours dejae eclipse" /> 
+  <meta name="robots" content="all" /> 
+  <meta name="revisit-after" content="2 months" /> 
+  <meta http-equiv="Content-Language" content="fr-FX" /> 
+  <meta name="author" content="Jean Michel DOUDOUX" /> 
+  <meta http-equiv="Reply-to" content="jean-michel.doudoux@wanadoo.fr" /> 
+  <link rev="made" href="mailto:jean-michel.doudoux@wanadoo.fr" /> 
+  <link href="dej_style.css" rel="stylesheet" type="text/css" /> 
  </head> 
  <body> 
   <!--ENTETE--> 
   <table border="0" cellpadding="2" cellspacing="0" width="100%" bgcolor="#7B7BC2"> 
    <tbody> 
     <tr> 
-     <td rowspan="2" align="center" width="50">&nbsp;</td>
-     <td rowspan="2" align="center" width="50"> <a href="chap028.htm" alt="28. Le d&eacute;veloppement avec J2ME"> <img src="FlecheG.gif" alt="28. Le d&eacute;veloppement avec J2ME" align="left" border="0" hspace="0" width="31" height="31"> </a> </td> 
-     <td rowspan="2" align="center" width="50"> <a href="chap029.htm" alt="29. Le plug-in CDT pour le d&eacute;veloppement en C / C++"> <img src="FlecheD.gif" alt="29. Le plug-in CDT pour le d&eacute;veloppement en C / C++" align="left" border="0" hspace="0" width="31" height="31"> </a> </td> 
-     <td rowspan="2" align="center"> <a href="javascript:window.print()"> <img src="imprimer.gif" width="46" height="40" align="middle" alt="Imprimer" border="0"> </a> </td> 
-     <td rowspan="2" align="center"> <a href="index.htm"> <img src="index.gif" alt="Sommaire" align="middle" border="0" hspace="0" width="34" height="31"> </a> </td> 
-     <td rowspan="2" align="center"> <a href="indexavecframes.htm" target="_top"> <img src="frame.png" alt="Consulter avec table des mati&egrave;res" align="middle" border="0" hspace="0" width="46" height="40"> </a> </td> 
+     <td rowspan="2" align="center" width="50">&nbsp;</td> 
+     <td rowspan="2" align="center" width="50"> <a href="chap028.htm" alt="28. Le d&eacute;veloppement avec J2ME"> <img src="FlecheG.gif" alt="28. Le d&eacute;veloppement avec J2ME" align="left" border="0" hspace="0" width="31" height="31" /> </a> </td> 
+     <td rowspan="2" align="center" width="50"> <a href="chap029.htm" alt="29. Le plug-in CDT pour le d&eacute;veloppement en C / C++"> <img src="FlecheD.gif" alt="29. Le plug-in CDT pour le d&eacute;veloppement en C / C++" align="left" border="0" hspace="0" width="31" height="31" /> </a> </td> 
+     <td rowspan="2" align="center"> <a href="javascript:window.print()"> <img src="imprimer.gif" width="46" height="40" align="middle" alt="Imprimer" border="0" /> </a> </td> 
+     <td rowspan="2" align="center"> <a href="index.htm"> <img src="index.gif" alt="Sommaire" align="middle" border="0" hspace="0" width="34" height="31" /> </a> </td> 
+     <td rowspan="2" align="center"> <a href="indexavecframes.htm" target="_top"> <img src="frame.png" alt="Consulter avec table des mati&egrave;res" align="middle" border="0" hspace="0" width="46" height="40" /> </a> </td> 
      <td align="right"> <font color="#FFFFFF" size="5"><b><i>D&eacute;veloppons en Java avec Eclipse&nbsp;&nbsp;</i></b></font><font color="#FFFFFF" size="-2"> v 0.80&nbsp;&nbsp;</font></td> 
     </tr> 
     <tr> 
@@ -30,12 +30,12 @@
     </tr> 
    </tbody> 
   </table> 
-  <hr> 
+  <hr /> 
   <p>&nbsp;</p> 
-  <h1>
+  <h1> 
    <!--resumetitre value="" -->Partie 7 : d'autres plug-ins</h1> 
   <p>&nbsp;</p> 
-  <p align="center"><img src="images/partie7.gif" width="455" height="431"></p> 
+  <p align="center"><img src="images/partie7.gif" width="455" height="431" /></p> 
   <p>&nbsp;</p> 
   <p>Cette partie pr&eacute;sente des plug-ins tiers qui ne sont pas d&eacute;di&eacute; directement aux d&eacute;veloppements avec Java.</p> 
   <p>Eclipse est un outil de d&eacute;veloppement, &eacute;crit en Java, dont un des buts initiaux est de pouvoir d&eacute;velopper non seulement en Java mais aussi avec d'autres langages gr&acirc;ce &agrave; des plug-ins sp&eacute;cifiques. Il existe d&eacute;j&agrave; plusieurs plug-ins plus ou moins avanc&eacute;s pour r&eacute;aliser des d&eacute;veloppements en C/C++ et Cobol d&eacute;velopp&eacute;s par le projet Eclipse mais aussi C# ou PHP d&eacute;velopp&eacute;s par des tiers. </p> 
@@ -44,23 +44,23 @@
   <!--listechapitredeb--> 
   <ul> 
    <li type="square">Le plug-in CDT pour le d&eacute;veloppement en C / C++ : pr&eacute;sente le plug-in CDT qui est sous projet officiel du projet Eclipse dont le but est faciliter le d&eacute;veloppement avec les langages C et C++.</li> 
-   <li type="square">Le plug-in EclipseUML  : pr&eacute;sente le plug-in EclipseUML de la soci&eacute;t&eacute; Omondo pour r&eacute;aliser des diagrammes UML avec Eclipse.</li> 
+   <li type="square">Le plug-in EclipseUML : pr&eacute;sente le plug-in EclipseUML de la soci&eacute;t&eacute; Omondo pour r&eacute;aliser des diagrammes UML avec Eclipse.</li> 
    <li type="square">Les bases de donn&eacute;es et Eclipse : pr&eacute;sente plusieurs plug-ins pour r&eacute;aliser des op&eacute;rations sur des bases de donn&eacute;es.</li> 
   </ul> 
   <!--listechapitrefin--> 
   <p>&nbsp;</p> 
   <p>&nbsp;</p> 
-  <!--PIED-->
-  <hr> 
+  <!--PIED--> 
+  <hr /> 
   <table border="0" cellpadding="2" cellspacing="0" width="100%" bgcolor="#7B7BC2"> 
    <tbody> 
     <tr> 
-     <td rowspan="2" align="center" width="50">&nbsp;</td>
-     <td rowspan="2" align="center" width="50"> <a href="chap028.htm" alt="28. Le d&eacute;veloppement avec J2ME"> <img src="FlecheG.gif" alt="28. Le d&eacute;veloppement avec J2ME" align="left" border="0" hspace="0" width="31" height="31"> </a> </td> 
-     <td rowspan="2" align="center" width="50"> <a href="chap029.htm" alt="29. Le plug-in CDT pour le d&eacute;veloppement en C / C++"> <img src="FlecheD.gif" alt="29. Le plug-in CDT pour le d&eacute;veloppement en C / C++" align="left" border="0" hspace="0" width="31" height="31"> </a> </td> 
-     <td rowspan="2" align="center"> <a href="javascript:window.print()"> <img src="imprimer.gif" width="46" height="40" align="middle" alt="Imprimer" border="0"> </a> </td> 
-     <td rowspan="2" align="center"> <a href="index.htm"> <img src="index.gif" alt="Sommaire" align="middle" border="0" hspace="0" width="34" height="31"> </a> </td> 
-     <td rowspan="2" align="center"> <a href="indexavecframes.htm" target="_top"> <img src="frame.png" alt="Consulter avec table des mati&egrave;res" align="middle" border="0" hspace="0" width="46" height="40"> </a> </td> 
+     <td rowspan="2" align="center" width="50">&nbsp;</td> 
+     <td rowspan="2" align="center" width="50"> <a href="chap028.htm" alt="28. Le d&eacute;veloppement avec J2ME"> <img src="FlecheG.gif" alt="28. Le d&eacute;veloppement avec J2ME" align="left" border="0" hspace="0" width="31" height="31" /> </a> </td> 
+     <td rowspan="2" align="center" width="50"> <a href="chap029.htm" alt="29. Le plug-in CDT pour le d&eacute;veloppement en C / C++"> <img src="FlecheD.gif" alt="29. Le plug-in CDT pour le d&eacute;veloppement en C / C++" align="left" border="0" hspace="0" width="31" height="31" /> </a> </td> 
+     <td rowspan="2" align="center"> <a href="javascript:window.print()"> <img src="imprimer.gif" width="46" height="40" align="middle" alt="Imprimer" border="0" /> </a> </td> 
+     <td rowspan="2" align="center"> <a href="index.htm"> <img src="index.gif" alt="Sommaire" align="middle" border="0" hspace="0" width="34" height="31" /> </a> </td> 
+     <td rowspan="2" align="center"> <a href="indexavecframes.htm" target="_top"> <img src="frame.png" alt="Consulter avec table des mati&egrave;res" align="middle" border="0" hspace="0" width="46" height="40" /> </a> </td> 
      <td align="right"> <font color="#FFFFFF" size="5"><b><i>D&eacute;veloppons en Java avec Eclipse&nbsp;&nbsp;</i></b></font><font color="#FFFFFF" size="-2"> v 0.80&nbsp;&nbsp;</font></td> 
      <td rowspan="2" align="center" valign="middle"> <script language="JavaScript1.1">
 <!--
@@ -79,7 +79,7 @@ hsd.writeln(hsi + '&ref=' + hsr.replace(/&/g, '$') + '" title="Mesurez votre aud
 //-->
 </script> 
       <noscript> 
-       <a href="http://www.xiti.com/xiti.asp?s=128624" target="_top"><img width="39" height="25" border="0" src="http://logv23.xiti.com/hit.xiti?s=128624&amp;p=&amp;" title="Mesurez votre audience"></a> 
+       <a href="http://www.xiti.com/xiti.asp?s=128624" target="_top"><img width="39" height="25" border="0" src="http://logv23.xiti.com/hit.xiti?s=128624&amp;p=&amp;" title="Mesurez votre audience" /></a> 
       </noscript> 
       <!--//--> </td> 
     </tr> 
@@ -87,6 +87,6 @@ hsd.writeln(hsi + '&ref=' + hsr.replace(/&/g, '$') + '" title="Mesurez votre aud
      <td align="right"><font color="#FFFFFF" size="-2">Copyright (C) 2003-2007 Jean-Michel DOUDOUX &nbsp;&nbsp;</font></td> 
     </tr> 
    </tbody> 
-  </table>   
+  </table>  
  </body>
 </html>
