--- a/dejae/src/webographie.htm
+++ b/dejae/src/webographie.htm
@@ -2,28 +2,28 @@
 <html>
  <head> 
   <title>Webographie Eclipse</title> 
-  <meta http-equiv="Content-type" content="text/html; charset=ISO-8859-1"> 
-  <meta name="description" content=""> 
-  <meta name="keywords" content="java tutorial cours dej eclipse"> 
-  <meta name="robots" content="all"> 
-  <meta name="revisit-after" content="2 months"> 
-  <meta http-equiv="Content-Language" content="fr-FX"> 
-  <meta name="author" content="Jean Michel DOUDOUX"> 
-  <meta http-equiv="Reply-to" content="jean-michel.doudoux@wanadoo.fr"> 
-  <link rev="made" href="mailto:jean-michel.doudoux@wanadoo.fr"> 
-  <link href="dej_style.css" rel="stylesheet" type="text/css"> 
+  <meta http-equiv="Content-type" content="text/html; charset=ISO-8859-1" /> 
+  <meta name="description" content="" /> 
+  <meta name="keywords" content="java tutorial cours dej eclipse" /> 
+  <meta name="robots" content="all" /> 
+  <meta name="revisit-after" content="2 months" /> 
+  <meta http-equiv="Content-Language" content="fr-FX" /> 
+  <meta name="author" content="Jean Michel DOUDOUX" /> 
+  <meta http-equiv="Reply-to" content="jean-michel.doudoux@wanadoo.fr" /> 
+  <link rev="made" href="mailto:jean-michel.doudoux@wanadoo.fr" /> 
+  <link href="dej_style.css" rel="stylesheet" type="text/css" /> 
  </head> 
  <body> 
   <!--ENTETE--> 
   <table border="0" cellpadding="2" cellspacing="0" width="100%" bgcolor="#7B7BC2"> 
    <tbody> 
     <tr> 
-     <td rowspan="2" align="center" width="50">&nbsp;</td>
-     <td rowspan="2" align="center" width="50"> <a href="GNUFDL.htm" alt="Annexe A : GNU Free Documentation License"> <img src="FlecheG.gif" alt="Annexe A : GNU Free Documentation License" align="left" border="0" hspace="0" width="31" height="31"> </a> </td> 
+     <td rowspan="2" align="center" width="50">&nbsp;</td> 
+     <td rowspan="2" align="center" width="50"> <a href="GNUFDL.htm" alt="Annexe A : GNU Free Documentation License"> <img src="FlecheG.gif" alt="Annexe A : GNU Free Documentation License" align="left" border="0" hspace="0" width="31" height="31" /> </a> </td> 
      <td rowspan="2" align="center" width="50"> </td> 
-     <td rowspan="2" align="center"> <a href="javascript:window.print()"> <img src="imprimer.gif" width="46" height="40" align="middle" alt="Imprimer" border="0"> </a> </td> 
-     <td rowspan="2" align="center"> <a href="index.htm"> <img src="index.gif" alt="Sommaire" align="middle" border="0" hspace="0" width="34" height="31"> </a> </td> 
-     <td rowspan="2" align="center"> <a href="indexavecframes.htm" target="_top"> <img src="frame.png" alt="Consulter avec table des mati&egrave;res" align="middle" border="0" hspace="0" width="46" height="40"> </a> </td> 
+     <td rowspan="2" align="center"> <a href="javascript:window.print()"> <img src="imprimer.gif" width="46" height="40" align="middle" alt="Imprimer" border="0" /> </a> </td> 
+     <td rowspan="2" align="center"> <a href="index.htm"> <img src="index.gif" alt="Sommaire" align="middle" border="0" hspace="0" width="34" height="31" /> </a> </td> 
+     <td rowspan="2" align="center"> <a href="indexavecframes.htm" target="_top"> <img src="frame.png" alt="Consulter avec table des mati&egrave;res" align="middle" border="0" hspace="0" width="46" height="40" /> </a> </td> 
      <td align="right"> <font color="#FFFFFF" size="5"><b><i>D&eacute;veloppons en Java avec Eclipse&nbsp;&nbsp;</i></b></font><font color="#FFFFFF" size="-2"> v 0.80&nbsp;&nbsp;</font></td> 
     </tr> 
     <tr> 
@@ -31,67 +31,67 @@
     </tr> 
    </tbody> 
   </table> 
-  <hr> 
+  <hr /> 
   <div align="justify"> 
    <p>&nbsp;</p> 
    <h2><a name="deb_Glossaire"> Annexe B : Webographie</a></h2> 
    <table width="100%" border="0" cellspacing="0" cellpadding="8"> 
-    <tbody>
+    <tbody> 
      <tr> 
       <td>&nbsp;</td> 
-      <td> <p><a href="http://www.eclipse.org/%20:%20la%20page%20officielle">http://www.eclipse.org/<br> </a>le site officiel d'Eclipse<br> </p> </td> 
+      <td> <p><a href="http://www.eclipse.org/%20:%20la%20page%20officielle">http://www.eclipse.org/<br /> </a>le site officiel d'Eclipse<br /> </p> </td> 
      </tr> 
      <tr> 
       <td>&nbsp;</td> 
-      <td><a href="http://www.eclipse.org/downloads/index.php">http://www.eclipse.org/downloads/index.php<br> </a>la page officielle pour le t&eacute;l&eacute;chargement d'Eclipse</td> 
+      <td><a href="http://www.eclipse.org/downloads/index.php">http://www.eclipse.org/downloads/index.php<br /> </a>la page officielle pour le t&eacute;l&eacute;chargement d'Eclipse</td> 
      </tr> 
      <tr> 
-      <td><img src="images/etlogo.gif" width="301" height="42"></td> 
-      <td><a href="http://www.eclipsetotale.com/index.html">http://www.eclipsetotale.com/index.html</a><br> portail en fran&ccedil;ais consacr&eacute; au projet Eclipse et aux outils WebSphere Studio d'IBM </td> 
+      <td><img src="images/etlogo.gif" width="301" height="42" /></td> 
+      <td><a href="http://www.eclipsetotale.com/index.html">http://www.eclipsetotale.com/index.html</a><br /> portail en fran&ccedil;ais consacr&eacute; au projet Eclipse et aux outils WebSphere Studio d'IBM </td> 
      </tr> 
      <tr> 
-      <td><img src="images/eclipse-plugin-logo.gif" width="175" height="80"></td> 
+      <td><img src="images/eclipse-plugin-logo.gif" width="175" height="80" /></td> 
       <td><a href="http://eclipse-plugins.2y.net/eclipse/index.jsp">http://eclipse-plugins.2y.net/eclipse/index.jsp</a></td> 
      </tr> 
      <tr> 
-      <td><img src="images/eclipse-wiki-logo.png" width="160" height="50"></td> 
+      <td><img src="images/eclipse-wiki-logo.png" width="160" height="50" /></td> 
       <td><a href="http://eclipsewiki.swiki.net">http://eclipsewiki.swiki.net/</a></td> 
      </tr> 
      <tr> 
       <td>&nbsp;</td> 
-      <td> <a href="http://www.sysdeo.com/eclipse/tomcatPluginFR.html">http://www.sysdeo.com/eclipse/tomcatPluginFR.html</a> <br> plug-in pour utiliser Tomcat dans Eclipse </td> 
+      <td> <a href="http://www.sysdeo.com/eclipse/tomcatPluginFR.html">http://www.sysdeo.com/eclipse/tomcatPluginFR.html</a> <br /> plug-in pour utiliser Tomcat dans Eclipse </td> 
      </tr> 
      <tr> 
       <td>&nbsp;</td> 
-      <td><a href="http://www.eclipse-workbench.com/jsp/">http://www.eclipse-workbench.com/jsp/</a><br> portail en anglais</td> 
+      <td><a href="http://www.eclipse-workbench.com/jsp/">http://www.eclipse-workbench.com/jsp/</a><br /> portail en anglais</td> 
      </tr> 
      <tr> 
       <td>&nbsp;</td> 
-      <td><a href="http://www.geocities.com/uwe_ewald/dbedit.html">http://www.geocities.com/uwe_ewald/dbedit.html</a> <br> un plug-in qui permet de visualiser le contenu d'une base de donn&eacute;es </td> 
-     </tr> 
-     <tr> 
-      <td>&nbsp;</td> 
-      <td>&nbsp;</td> 
+      <td><a href="http://www.geocities.com/uwe_ewald/dbedit.html">http://www.geocities.com/uwe_ewald/dbedit.html</a> <br /> un plug-in qui permet de visualiser le contenu d'une base de donn&eacute;es </td> 
      </tr> 
      <tr> 
       <td>&nbsp;</td> 
       <td>&nbsp;</td> 
      </tr> 
-    </tbody>
+     <tr> 
+      <td>&nbsp;</td> 
+      <td>&nbsp;</td> 
+     </tr> 
+    </tbody> 
    </table> 
    <p>&nbsp;</p> 
   </div> 
-  <!--PIED-->
-  <hr> 
+  <!--PIED--> 
+  <hr /> 
   <table border="0" cellpadding="2" cellspacing="0" width="100%" bgcolor="#7B7BC2"> 
    <tbody> 
     <tr> 
-     <td rowspan="2" align="center" width="50">&nbsp;</td>
-     <td rowspan="2" align="center" width="50"> <a href="GNUFDL.htm" alt="Annexe A : GNU Free Documentation License"> <img src="FlecheG.gif" alt="Annexe A : GNU Free Documentation License" align="left" border="0" hspace="0" width="31" height="31"> </a> </td> 
+     <td rowspan="2" align="center" width="50">&nbsp;</td> 
+     <td rowspan="2" align="center" width="50"> <a href="GNUFDL.htm" alt="Annexe A : GNU Free Documentation License"> <img src="FlecheG.gif" alt="Annexe A : GNU Free Documentation License" align="left" border="0" hspace="0" width="31" height="31" /> </a> </td> 
      <td rowspan="2" align="center" width="50"> </td> 
-     <td rowspan="2" align="center"> <a href="javascript:window.print()"> <img src="imprimer.gif" width="46" height="40" align="middle" alt="Imprimer" border="0"> </a> </td> 
-     <td rowspan="2" align="center"> <a href="index.htm"> <img src="index.gif" alt="Sommaire" align="middle" border="0" hspace="0" width="34" height="31"> </a> </td> 
-     <td rowspan="2" align="center"> <a href="indexavecframes.htm" target="_top"> <img src="frame.png" alt="Consulter avec table des mati&egrave;res" align="middle" border="0" hspace="0" width="46" height="40"> </a> </td> 
+     <td rowspan="2" align="center"> <a href="javascript:window.print()"> <img src="imprimer.gif" width="46" height="40" align="middle" alt="Imprimer" border="0" /> </a> </td> 
+     <td rowspan="2" align="center"> <a href="index.htm"> <img src="index.gif" alt="Sommaire" align="middle" border="0" hspace="0" width="34" height="31" /> </a> </td> 
+     <td rowspan="2" align="center"> <a href="indexavecframes.htm" target="_top"> <img src="frame.png" alt="Consulter avec table des mati&egrave;res" align="middle" border="0" hspace="0" width="46" height="40" /> </a> </td> 
      <td align="right"> <font color="#FFFFFF" size="5"><b><i>D&eacute;veloppons en Java avec Eclipse&nbsp;&nbsp;</i></b></font><font color="#FFFFFF" size="-2"> v 0.80&nbsp;&nbsp;</font></td> 
      <td rowspan="2" align="center" valign="middle"> <script language="JavaScript1.1">
 <!--
@@ -110,7 +110,7 @@ hsd.writeln(hsi + '&ref=' + hsr.replace(/&/g, '$') + '" title="Mesurez votre aud
 //-->
 </script> 
       <noscript> 
-       <a href="http://www.xiti.com/xiti.asp?s=128624" target="_top"><img width="39" height="25" border="0" src="http://logv23.xiti.com/hit.xiti?s=128624&amp;p=&amp;" title="Mesurez votre audience"></a> 
+       <a href="http://www.xiti.com/xiti.asp?s=128624" target="_top"><img width="39" height="25" border="0" src="http://logv23.xiti.com/hit.xiti?s=128624&amp;p=&amp;" title="Mesurez votre audience" /></a> 
       </noscript> 
       <!--//--> </td> 
     </tr> 
@@ -118,6 +118,6 @@ hsd.writeln(hsi + '&ref=' + hsr.replace(/&/g, '$') + '" title="Mesurez votre aud
      <td align="right"><font color="#FFFFFF" size="-2">Copyright (C) 2003-2007 Jean-Michel DOUDOUX &nbsp;&nbsp;</font></td> 
     </tr> 
    </tbody> 
-  </table>   
+  </table>  
  </body>
 </html>
